fix/dev: slight fix to force dark mode + fix possible moves logic on abstractPiece

--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -42,5 +42,5 @@
 }
 
 .highlight {
-    border: 2px solid limegreen;
+    border: 4px dashed black;
 }
